<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny_8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gray_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_small_24"
            android:paddingTop="@dimen/spacing_small_24"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            app:layout_behavior=".FancyLinearLayoutBehavior"
            >

            <LinearLayout
                style="@style/TopToolbarStyle">
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="5"/>
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/info_text_rating"/>
            </LinearLayout>

            <View
                style="@style/VerticalLinesStyle"/>

            <LinearLayout
                style="@style/TopToolbarStyle"
                android:layout_weight="2">
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="5"/>
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/info_text_code"/>
            </LinearLayout>

            <View
                style="@style/VerticalLinesStyle"/>

            <LinearLayout
                style="@style/TopToolbarStyle">
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="5"/>
                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/info_text_projects"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_normal_32"
                android:layout_marginStart="@dimen/spacing_normal_32"
                android:layout_marginRight="@dimen/spacing_smaller_16"
                android:layout_marginEnd="@dimen/spacing_smaller_16">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"
                        android:enabled="false"
                        android:text="@string/mobile_phone_nuber"
                        android:fontFamily="sans-serif-light">
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/call_trigger"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thick_1"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_large_72"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mail_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_normal_32"
                android:layout_marginRight="@dimen/spacing_smaller_16">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="textEmailAddress"
                        android:enabled="false"
                        android:text="@string/email_value"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light">
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/email_trigger"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thick_1"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_large_72"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vkontakte" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_normal_32"
                android:layout_marginRight="@dimen/spacing_smaller_16"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vk"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:inputType="text"
                        android:enabled="false"
                        android:text="@string/vk_value"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light"
                        >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vk_trigger"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thick_1"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_large_72"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mark_github" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_normal_32"
                android:layout_marginRight="@dimen/spacing_smaller_16">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/github_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/github"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:enabled="false"
                        android:text="@string/github_value"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light"
                        >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/github_trigger"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thick_1"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_large_72"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/spacing_normal_32"
                android:layout_marginRight="@dimen/spacing_smaller_16">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/about"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:enabled="false"
                        android:text="@string/about_value"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light" >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thick_1"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_large_72"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>